--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@next/third-parties": "^14.1.2",
     "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-slot": "^1.0.2",
+    "@vercel/analytics": "^1.2.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "gh-pages": "^6.1.1",
